# python-project-52

./: .gitignore  Makefile  README.md  build.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: mu-check.uml  mu-check.yml
.qlty/: qlty.toml
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_name.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json  test_data.json  test_statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json  test_tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0002_initial.py  0002_task_labels.py  0003_alter_task_created_at_alter_task_labels.py  0003_alter_task_status.py  0004_alter_task_labels.py  0004_alter_task_status.py  0005_alter_task_created_at.py  0005_alter_task_status.py  0006_alter_task_assigned_to.py  0006_alter_task_status.py  0007_alter_task_assigned_to.py  0007_alter_task_status.py  0008_alter_task_assigned_to.py  0008_alter_task_status.py  0009_alter_task_status.py
task_manager/templates/: index.html  layout.html
task_manager/templates/task_manager/: index.html  (+1 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+22 files in other folders)
